# HackProject

./: README.md  compose.yaml
back/: Dockerfile  pyproject.toml
back/src/: main.py
back/src/llm/: lmModel.py  lmModel_test.py  loadLLM.py
back/src/vectorDB/: vectorDB.py  vectorDB_init.py
front/: .prettierignore  .prettierrc  Dockerfile  angular.json  package-lock.json  package.json
front/src/app/: api.service.ts  app.config.ts  app.css  app.html  app.ts
