[tool.poetry]
name = "ncrhack"
version = "0.1.0"
description = "NCR Hachathon project"
authors = ["Ditrip <shpak.mitia2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.13"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
