[tool.poetry]
name = "ncrhack"
version = "0.1.0"
description = "NCR Hachathon project"
authors = ["Ditrip <shpak.mitia2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
fastapi = {extras = ["standard"], version = "^0.115.13"}
transformers = "^4.53.2"
torch = {version = "^2.7.1+cpu", source = "pytorch-cpu"}
torchvision = {version = "^0.22.1+cpu", source = "pytorch-cpu"}
torchaudio = {version = "^2.7.1+cpu", source = "pytorch-cpu"}
chromadb = "^1.0.15"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
